# databricks_squad

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  architecture.md  databricks.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
configs/: dev.yml  prod.yml  test.yml
docs/: api-reference.md  architecture.md  runbook.md
notebooks/: 00_schema_tests.py  01_bronze_ingestion.py  02_silver_transforms.py  03_gold_analytics.py  99_validation_and_smoke_tests.py
src/: __init__.py
src/bronze/: __init__.py  bronze_accounts.py  bronze_customers.py  bronze_merchants.py  bronze_transactions.py
src/common/: __init__.py  config.py  constants.py  io.py  logging_utils.py  quality.py  schema_utils.py
src/generators/: __init__.py  synthetic_data_generator.py
src/gold/: __init__.py  gold_analytics.py  gold_kpis.py
src/silver/: __init__.py  quarantine.py  silver_dimensions.py  silver_financials.py
tests/: conftest.py
tests/data_quality/: __init__.py  test_transaction_quality.py
tests/integration/: test_bronze_to_silver.py
tests/smoke/: test_pipeline_e2e.py
tests/unit/: test_bronze_transactions.py  test_config.py  test_quality.py  test_silver_financials.py
